--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
     }
     
     function scanar() {
-      ZaloPay.scanARCampaign();
+      var opt =       {
+        desc: 'scanARCode Tetholiday2019',
+        needResult: 1, // 0 by default, with the scanning result processed by ZaloPay. The scanning result is directly returned if it is 1.
+        scanType: ["qrCode"], // Scanning type, including QR code or bar code. Both by default.
+        success: function(res) {
+          alert("scan result: " + res.scan_result);
+        }
+      };
+      ZaloPay.scanARCampaign(opt);
     }
     
   </script>
