--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         needResult: 1, // 0 by default, with the scanning result processed by ZaloPay. The scanning result is directly returned if it is 1.
         scanType: ["qrCode"], // Scanning type, including QR code or bar code. Both by default.
         success: function(res) {
-          alert("scan result: " + res.data.scan_result);
+          alert("scan result: " + res.data.resultStr);
         }
       };
       ZaloPay.scanARCampaign(opt);
@@ -53,6 +53,6 @@
   </script>
    <button onclick="scan()">ScanQR</button>
    <button onclick="share()">Share</button>
-   <button onclick="scanar()">ScanAR</button>
+   <button onclick="scanar()">ScanAR 01</button>
   </body>
 </html>
