--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 
-<a href="https://www.google.com">Google</a>
+<a href="https://testbed-swift.app.link/1av1oy9PvU">Google</a>
 <button onclick="onClick()"> ZaloPay</button>
 
 </body>
