--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 <html>
 <head>
 <title>Page Title</title>
+<!-- https://branchbarebones.app.link/lw0J09wiCU -->
+<!-- https://branchster.app.link/8zDVl4ROvU -->
 <script>
   function onClick(params) {
-    window.location.href = 'https://branchster.app.link/8zDVl4ROvU';
+    window.location.href = 'https://branchbarebones.app.link/lw0J09wiCU';
   }
 </script>
 </head>
