--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!-- https://branchster.app.link/8zDVl4ROvU -->
 <script>
   function onClick(params) {
-    window.location.href = 'https://branchbarebones.app.link/lw0J09wiCU';
+    window.location.href = 'https://branchbarebones.app.link/D9CJI57sCU';
   }
 </script>
 </head>
