--- a/index.html
+++ b/index.html
@@ -67,12 +67,16 @@
   function onClick(params) {
     window.location.href = 'https://branchbarebones.app.link/D9CJI57sCU';
   }
+
+  function closePopup() {
+    ZaloPay.closeWindow();
+  }
 </script>
 </head>
 <body>
 
 <a href="https://testbed-swift.app.link/1av1oy9PvU">Google</a>
 <button onclick="onClick()"> ZaloPay</button>
-
+<button onclick="closePopup()">Close Test</button>
 </body>
 </html>
