--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
   function closePopup() {
     ZaloPay.closeWindow();
   }
+
+  function scan() {
+      var opt =       {
+        desc: 'scanQRCode desc',
+        needResult: 1, // 0 by default, with the scanning result processed by ZaloPay. The scanning result is directly returned if it is 1.
+        scanType: ["qrCode","barCode"], // Scanning type, including QR code or bar code. Both by default.
+        success: function(res) {
+          alert("scan result: " + res.scan_result);
+        }
+      };
+	  	ZaloPay.scanQRCode(opt);
+    }
+    
 </script>
 </head>
 <body>
@@ -78,5 +91,6 @@
 <a href="https://testbed-swift.app.link/1av1oy9PvU">Google</a>
 <button onclick="onClick()"> ZaloPay</button>
 <button onclick="closePopup()">Close Test</button>
+<button onclick="scan()">ScanQR</button>
 </body>
 </html>
