--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         function showDialog() {
             // alert('call show dialog')
             // ZaloPay.showLoading();
-            webkit.messageHandlers.GetUrlAtDocumentEnd.postMessage(document.URL)
+            webkit.messageHandlers.GetUrlAtDocumentEnd.postMessage("Hello, world!")
         }
     </script>
   </head>
