--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         function showDialog() {
             // alert('call show dialog')
             // ZaloPay.showLoading();
-            windown.webkit.messageHandlers.GetUrlAtDocumentEnd.postMessage("Hello, world!")
+            window.webkit.messageHandlers.GetUrlAtDocumentEnd.postMessage("Hello, world!")
         }
     </script>
   </head>
