--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <p>Choose at least one funtion to test!</p>
     <table style="width:100%">
         <tbody><tr>
-          <td> <button onclick="closeWindow()">Close WebView</button></td>
-          <td> <button onclick="showLoading()">Show Loading</button></td>
-          <td> <button onclick="hideLoading()">Hide Loading</button></td>
+          <td> <button onclick="sendLoginAction() ">Close WebView</button></td>
+          <td> <button onclick="sendLoginAction() ">Show Loading</button></td>
+          <td> <button onclick="hsendLoginAction() ">Hide Loading</button></td>
         </tr>
       
         <tr>
-          <td colspan="1"> <button onclick="showDialog()">Show Dialog</button></td>
-           <td colspan="1"> <button onclick="payOrder()">Pay(App To App)</button></td>
+          <td colspan="1"> <button onclick="sendLoginAction() ">Show Dialog</button></td>
+           <td colspan="1"> <button onclick="sendLoginAction() ">Pay(App To App)</button></td>
         </tr>
       </tbody></table>
   
