--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <title>Web app testing </title>
-    <script src="./lucasblackp_io_files/main.js"></script>
+    <script type="text/javascript" src="./lucasblackp_io_files/main.js"></script>
     
     <style>
         table, th, td {
@@ -31,7 +31,7 @@
         <tbody><tr>
           <td> <button onclick="sendLoginAction() ">Close WebView</button></td>
           <td> <button onclick="sendLoginAction() ">Show Loading</button></td>
-          <td> <button onclick="hsendLoginAction() ">Hide Loading</button></td>
+          <td> <button onclick="sendLoginAction() ">Hide Loading</button></td>
         </tr>
       
         <tr>
