--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!-- saved from url=(0033)https://nghianguyen979.github.io/ -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <title>Web app testing </title>
-    <script type="text/javascript" src="./lucasblackp_io_files/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     
     <style>
         table, th, td {
