--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <title>Web app testing </title>
-    <script type="text/javascript" src="main.js"></script>
+    
     
     <style>
         table, th, td {
@@ -30,7 +30,8 @@
     <h2>Demo webapp for testing</h2>
     <p>Choose at least one funtion to test!</p>
     <table style="width:100%">
-        <tbody><tr>
+        <tbody>
+          <tr>
           <td> <button onclick="sendLoginAction()">Close WebView</button></td>
           <td> <button onclick="sendLoginAction()">Show Loading</button></td>
           <td> <button onclick="sendLoginAction()">Hide Loading</button></td>
@@ -40,7 +41,9 @@
           <td colspan="1"> <button onclick="sendLoginAction()">Show Dialog</button></td>
            <td colspan="1"> <button onclick="sendLoginAction()">Pay(App To App)</button></td>
         </tr>
-      </tbody></table>
+      </tbody>
+    </table>
+    <script type="text/javascript" src="main.js"></script>
   
 
 </body></html>
