--- a/index.html
+++ b/index.html
@@ -1,57 +1,70 @@
-<!doctype html>
-<html><head>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<style type='text/css'>
-		html { font-family:Helvetica; color:#222; }
-        h1 { color:#FE8FBD; font-size:24px; margin-top:24px; }
-		button { margin:0 3px 10px; font-size:14px; border: 2px solid #000000; }
-        .logLine_Native { border-bottom:1px solid #FFA67C; padding:4px 2px; font-family:courier; font-size:12px; }
-        .logLine_JS { border-bottom:1px solid #D867D8; padding:4px 2px; font-family:courier; font-size:12px; }
-	</style>
-</head><body>
-	<h1>Demo</h1>
-	<script>
-	window.onerror = function(err) {
-		log('window.onerror: ' + err)
-	}
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <h1>* Account(STG):</h1>
+    <h4>Phone Number: +966 503334444</h4>
 
-    function setupWKWebViewJavascriptBridge(callback) {
-        if (window.WKWebViewJavascriptBridge) { return callback(WKWebViewJavascriptBridge); }
-        if (window.WKWVJBCallbacks) { return window.WKWVJBCallbacks.push(callback); }
-        window.WKWVJBCallbacks = [callback];
-        window.webkit.messageHandlers.iOS_Native_InjectJavascript.postMessage(null)
-    }
+    <h3>------------------------------------------------------------------------</h3>
 
-    setupWKWebViewJavascriptBridge(function(bridge) {
-		var uniqueId = 1
-		function log(message, data, type) {
-			var log = document.getElementById('log')
-			var el = document.createElement('div')
-            el.className = type == 'native' ? 'logLine_Native' : 'logLine_JS'
-			el.innerHTML = uniqueId++ + '. ' + message + ':<br/>' + JSON.stringify(data)
-			if (log.children.length) { log.insertBefore(el, log.children[0]) }
-			else { log.appendChild(el) }
-		}
+    <h1>* DeepLinks:</h1></br>
+    <h2>1. Payments:</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="http://app-staging.tamara.co/payments/a78d5939-a164-4708-a980-62ddf633fecd">/payments/a78d5939-a164-4708-a980-62ddf633fecd</a></br>
+    <h3 style="color:green;">Multiple Payment</h3>
+    <a href="http://app-staging.tamara.co/payments/dd9b97c8-fcc7-4142-af3f-373c18ab977e&7e58ed8f-4309-4d88-bb88-49596e5f93ed">/payments/dd9b97c8-fcc7-4142-af3f-373c18ab977e&7e58ed8f-4309-4d88-bb88-49596e5f93ed</a></br>
 
-		bridge.registerHandler('testJavascriptHandler', function(data, responseCallback) {
-			log('iOS called testJavascriptHandler with', data, 'native')
-			var responseData = { 'Javascript Says':'Right back atcha!' }
-			log('JS responding with', responseData, 'native')
-			responseCallback(responseData)
-		})
+    <h2>2. Orders</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="http://app-staging.tamara.co/orders/a78d5939-a164-4708-a980-62ddf633fecd">/orders/a78d5939-a164-4708-a980-62ddf633fecd</a></br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="http://app-staging.tamara.co/orders/a78d5939-a164-4708-a980-123456789012">/orders/a78d5939-a164-4708-a980-123456789012</a></br>
 
-		document.body.appendChild(document.createElement('br'))
+    <h2>3. In Store</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="http://app-staging.tamara.co/in-store">/in-store</a></br>
 
-		var callbackButton = document.getElementById('buttons').appendChild(document.createElement('button'))
-		callbackButton.innerHTML = 'Fire testiOSCallback'
-		callbackButton.onclick = function(e) {
-			e.preventDefault()
-			log('JS calling handler "testiOSCallback"')
-			bridge.callHandler('testiOSCallback', {'foo': 'bar'}, function(response) {
-				log('JS got response', response, 'js')
-			})
-		}
-	})
-	</script>
-	<div id='buttons'></div> <div id='log'></div>
-</body></html>
+    <h2>4. Category</h2>
+    <h3 style="color:green;">Correct! (id = 8)</h3>
+    <a href="http://app-staging.tamara.co/category/8">/category/8</a></br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="http://app-staging.tamara.co/category/100">/category/100</a></br>
+
+    <h2>5. Bank Accounts</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="http://app-staging.tamara.co/settings/bank-accounts">/bank-accounts</a></br>
+    </br>
+
+    <h3>------------------------------------------------------------------------</h3>
+
+    <h1>* DynamicLinks</h1></br>
+    <h2>1. Payments:</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="https://app-staging.tamara.co/J2JAYvMEgoWMb7P58">https://app-staging.tamara.co/J2JAYvMEgoWMb7P58</a></br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app-staging.tamara.co/MEoCKh1beaPBeSrCA">https://app-staging.tamara.co/MEoCKh1beaPBeSrCA</a></br>
+
+    <h2>2. Orders</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="https://app-staging.tamara.co/jd2AerCFaz9E5mR88">https://app-staging.tamara.co/jd2AerCFaz9E5mR88</a></br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app-staging.tamara.co/nUT8EXxDwAV2WUpm6">https://app-staging.tamara.co/nUT8EXxDwAV2WUpm6</a></br>
+
+    <h2>3. In Store</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://app-staging.tamara.co/RGugfuX78URaNRcz5">https://app-staging.tamara.co/RGugfuX78URaNRcz5</a></br>
+
+    <h2>4. Category</h2>
+    <h3 style="color:green;">Correct! (id = 8)</h3>
+    <a href="https://app-staging.tamara.co/t7FCDKZvm2bqVEd67">https://app-staging.tamara.co/t7FCDKZvm2bqVEd67</a></br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app-staging.tamara.co/FATxQKnGk9VRJr2N9">https://app-staging.tamara.co/FATxQKnGk9VRJr2N9</a></br>
+
+    <h2>5. Bank Accounts</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://app-staging.tamara.co/44XadSuCghGfRUEX8">https://app-staging.tamara.co/44XadSuCghGfRUEX8</a></br>
+    </br>
+
+  </body>
+</html>
