--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h3 style="color:green;">Correct! (id = 8)</h3>
     <a href="https://app-staging.tamara.co/t7FCDKZvm2bqVEd67">https://app-staging.tamara.co/t7FCDKZvm2bqVEd67</a></br>
     <h3 style="color:red;">Wrong</h3>
-    <a href="https://app-staging.tamara.co/FATxQKnGk9VRJr2N9">https://app-staging.tamara.co/FATxQKnGk9VRJr2N9</a></br>
+    <a href="https://app.tamara.co/FATxQKnGk9VRJr2N9">https://app-staging.tamara.co/FATxQKnGk9VRJr2N9</a></br>
 
     <h2>5. Bank Accounts</h2>
     <h3 style="color:green;">Correct!</h3>
