--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <h2>4. Category</h2>
     <h3 style="color:green;">Correct! (id = 8)</h3>
-    <a href="https://app-staging.tamara.co/t7FCDKZvm2bqVEd67">https://app-staging.tamara.co/t7FCDKZvm2bqVEd67</a></br>
+    <a href="https://app.tamara.co/t7FCDKZvm2bqVEd67">https://app-staging.tamara.co/t7FCDKZvm2bqVEd67</a></br>
     <h3 style="color:red;">Wrong</h3>
     <a href="https://app.tamara.co/FATxQKnGk9VRJr2N9">https://app-staging.tamara.co/FATxQKnGk9VRJr2N9</a></br>
 
