--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
     <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
     <a href="https://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/J2JAYvMEgoWMb7P58</a></br>
     <h3 style="color:red;">Wrong</h3>
-    <a href="https://app.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/MEoCKh1beaPBeSrCA</a></br>
+    <a href="https://app.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app.tamara.co/MEoCKh1beaPBeSrCA</a></br>
 
     <h2>2. Orders</h2>
     <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
     <a href="https://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/jd2AerCFaz9E5mR88</a></br>
     <h3 style="color:red;">Wrong</h3>
-    <a href="https://app.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/nUT8EXxDwAV2WUpm6</a></br>
+    <a href="https://app.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app.tamara.co/nUT8EXxDwAV2WUpm6</a></br>
 
     <h2>3. In Store</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://app.tamara.co/in-store">https://app-staging.tamara.co/RGugfuX78URaNRcz5</a></br>
+    <a href="https://app.tamara.co/in-store">https://app.tamara.co/RGugfuX78URaNRcz5</a></br>
 
     <h2>4. Category</h2>
     <h3 style="color:green;">Correct! (id = 8)</h3>
     <a href="https://app.tamara.co/category?categoryId=8">https://app-staging.tamara.co/t7FCDKZvm2bqVEd67</a></br>
     <h3 style="color:red;">Wrong</h3>
-    <a href="https://app.tamara.co/category?categoryId=8">https://app-staging.tamara.co/FATxQKnGk9VRJr2N9</a></br>
+    <a href="https://app.tamara.co/category?categoryId=8">https://app.tamara.co/FATxQKnGk9VRJr2N9</a></br>
 
     <h2>5. Bank Accounts</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://app.tamara.co/bank-accounts">https://app-staging.tamara.co/44XadSuCghGfRUEX8</a></br>
+    <a href="https://app.tamara.co/bank-accounts">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
     </br>
 
   </body>
