--- a/index.html
+++ b/index.html
@@ -4,66 +4,33 @@
   </head>
   <body>
     <h1>* Account(STG):</h1>
-    <h4>Phone Number: +966 503334444</h4>
-
-    <h3>------------------------------------------------------------------------</h3>
-
-    <h1>* DeepLinks:</h1></br>
-    <h2>1. Payments:</h2>
-    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
-    <a href="http://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">/payments/a78d5939-a164-4708-a980-62ddf633fecd</a></br>
-    <h3 style="color:green;">Multiple Payment</h3>
-    <a href="http://app.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">/payments/dd9b97c8-fcc7-4142-af3f-373c18ab977e&7e58ed8f-4309-4d88-bb88-49596e5f93ed</a></br>
-
-    <h2>2. Orders</h2>
-    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
-    <a href="http://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">/orders/a78d5939-a164-4708-a980-62ddf633fecd</a></br>
-    <h3 style="color:red;">Wrong</h3>
-    <a href="http://app.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">/orders/a78d5939-a164-4708-a980-123456789012</a></br>
-
-    <h2>3. In Store</h2>
-    <h3 style="color:green;">Correct!</h3>
-    <a href="http://app.tamara.co/in-store">/in-store</a></br>
-
-    <h2>4. Category</h2>
-    <h3 style="color:green;">Correct! (id = 8)</h3>
-    <a href="http://app-staging.tamara.co/category/8">/category/8</a></br>
-    <h3 style="color:red;">Wrong</h3>
-    <a href="http://app.tamara.co/category/100">/category/100</a></br>
-
-    <h2>5. Bank Accounts</h2>
-    <h3 style="color:green;">Correct!</h3>
-    <a href="http://app-staging.tamara.co/settings/bank-accounts">/bank-accounts</a></br>
-    </br>
+    <h4>Phone Number: +966 501233215</h4>
 
     <h3>------------------------------------------------------------------------</h3>
 
     <h1>* DynamicLinks</h1></br>
     <h2>1. Payments:</h2>
     <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
-    <a href="https://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/J2JAYvMEgoWMb7P58</a></br>
+    <a href="https://tamarastg.page.link/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://tamarastg.page.link/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd</a></br>
+     <h2>1.1 Multi Pays:</h2>
     <h3 style="color:red;">Wrong</h3>
-    <a href="https://app.tamara.co/payments?orderId=862ac41e-4f3d-4906-b53c-d192fcf36120">https://app.tamara.co/ee73272b-a740-458b-a7d3-628271d1b246</a></br>
+    <a href="https://tamarastg.page.link/payments/paydues">https://tamarastg.page.link/payments/paydues</a></br>
 
     <h2>2. Orders</h2>
     <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
-    <a href="https://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/jd2AerCFaz9E5mR88</a></br>
-    <h3 style="color:red;">Wrong</h3>
-    <a href="https://app.tamara.co/orders?orderId=4edc4756-7624-42fd-acce-9df54164286c">https://app.tamara.co/4edc4756-7624-42fd-acce-9df54164286c</a></br>
+    <a href="https://tamarastg.page.link/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">"https://tamarastg.page.link/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd</a></br>
 
     <h2>3. In Store</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://app.tamara.co/in-store">https://app.tamara.co/RGugfuX78URaNRcz5</a></br>
+    <a href="https://tamarastg.page.link/in-store">https://tamarastg.page.link/in-store</a></br>
 
     <h2>4. Category</h2>
     <h3 style="color:green;">Correct! (id = 8)</h3>
-    <a href="https://app.tamara.co/category?categoryId=8">https://app-staging.tamara.co/t7FCDKZvm2bqVEd67</a></br>
-    <h3 style="color:red;">Wrong</h3>
-    <a href="https://app.tamara.co/category?categoryId=8">https://app.tamara.co/FATxQKnGk9VRJr2N9</a></br>
+    <a href="https://tamarastg.page.link/category?categoryId=8">https://tamarastg.page.link/category?categoryId=8</a></br>
 
     <h2>5. Bank Accounts</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://app.tamara.co/bank-accounts">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
+    <a href="https://tamarastg.page.link/bank-accounts">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
     </br>
 
   </body>
