--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h2>3. In Store Another URL</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://apptamara.page.link/in-store">https://tamarastg.page.link/in-store</a></br>
+    <a href="https://apptamara.page.link/in-store">https://apptamara.page.link/in-store</a></br>
 
     <h2>4. Category</h2>
     <h3 style="color:green;">Correct! (id = 8)</h3>
