--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <h2>1. Payments:</h2>
     <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
     <a href="https://tamarastg.page.link/payments?orderId=036567a2-228f-46aa-ba31-09b66a7edf67">https://tamarastg.page.link/payments?orderId=036567a2-228f-46aa-ba31-09b66a7edf67</a></br>
+
      <h2>1.1 Multi Pays:</h2>
     <h3 style="color:red;">Wrong</h3>
     <a href="https://tamarastg.page.link/payments/paydues">https://tamarastg.page.link/payments/paydues</a></br>
+
+     <h2>1.1 Paydue with short Links:</h2>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://tamarastg.page.link/ufoNV9A9PwfjJV9Z6 ">https://tamarastg.page.link/ufoNV9A9PwfjJV9Z6</a></br>
+    
 
     <h2>2. Orders</h2>
     <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
