--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
     <a href="https://tamarastg.page.link/payments?orderId=036567a2-228f-46aa-ba31-09b66a7edf67">https://tamarastg.page.link/payments?orderId=036567a2-228f-46aa-ba31-09b66a7edf67</a></br>
 
      <h2>1.1 Multi Pays:</h2>
-    <h3 style="color:red;">Wrong</h3>
+    <h3 style="color:red;">Origin No Short</h3>
     <a href="https://tamarastg.page.link/payments/paydues">https://tamarastg.page.link/payments/paydues</a></br>
 
      <h2>1.1 Paydue with short Links:</h2>
-    <h3 style="color:red;">Wrong</h3>
+    <h3 style="color:blue;">From iOS Build</h3>
     <a href="https://tamarastg.page.link/ufoNV9A9PwfjJV9Z6 ">https://tamarastg.page.link/ufoNV9A9PwfjJV9Z6</a></br>
+
+     <h2>1.1 Paydue with short Links From Android:</h2>
+    <h3 style="color:blue;">From Android using SDK Build</h3>
+    <a href="https://tamarastg.page.link/HY82fnwovjJx9gnH9 ">https://tamarastg.page.link/HY82fnwovjJx9gnH9</a></br>
     
 
     <h2>2. Orders</h2>
