--- a/index.html
+++ b/index.html
@@ -47,5 +47,15 @@
     <a href="https://tamarastg.page.link/bank-accounts">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
     </br>
 
+    <h2>6. Short Link Test From PO </h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://apptamara.page.link/GFmHBKVL9po9rqK18">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
+    </br>
+
+    <h2>7. Short Link Test From PO Part 02 </h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://apptamara.page.link/tJgnyJ3P4CD2HcsJ9">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
+    </br>
+
   </body>
 </html>
