--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <h2>6. Short Link Test with: https://app.tamara.co/payments?orderId=00824931-fc14-40f9-b660-512d98b8b0fc </h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://apptamara.page.link/zXM6ra7bsTXiou4D6">https://apptamara.page.link/zXM6ra7bsTXiou4D6</a></br>
+    <a href="https://apptamara.page.link/jVDVx4vcHYvNL7xx6">https://apptamara.page.link/jVDVx4vcHYvNL7xx6</a></br>
     </br>
 
     <h2>7. Short Link Test From PO Part 02 </h2>
