--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <a href="https://apptamara.page.link/NaK6YPML1ViDg4dg8">https://apptamara.page.link/NaK6YPML1ViDg4dg8</a></br>
     </br>
 
-    <h2>7. Short Link Test From PO Part 02 </h2>
+    <h2>7. Short Link, No Preview, For: https://app.tamara.co/payments/paydues</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://apptamara.page.link/tJgnyJ3P4CD2HcsJ9">https://apptamara.page.link/tJgnyJ3P4CD2HcsJ9</a></br>
+    <a href="https://apptamara.page.link/MucyBbDS3FJ9wK567">https://apptamara.page.link/MucyBbDS3FJ9wK567</a></br>
     </br>
 
   </body>
