--- a/index.html
+++ b/index.html
@@ -1,61 +1,157 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <h1>* Account(STG):</h1>
-    <h4>Phone Number: +966 501233215</h4>
+    <h1>➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰</h1>
+    <h1> 👻 👻 👻  PRODUCTION 👻 👻 👻  </h1>
+    <h1>* Account(PRO)</h1>
+    <h4>Phone Number: +966 500000001</h4>
+    <h4>OTP: 972268</h4>
+    <h1>➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰</h1>
 
-    <h3>------------------------------------------------------------------------</h3>
-
-    <h1>* DynamicLinks</h1></br>
+    <h1>* DeepLinks:</h1><br>
     <h2>1. Payments:</h2>
-    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
-    <a href="https://tamarastg.page.link/payments?orderId=036567a2-228f-46aa-ba31-09b66a7edf67">https://tamarastg.page.link/payments?orderId=036567a2-228f-46aa-ba31-09b66a7edf67</a></br>
+    <h3 style="color:green;">Correct! (id = 00824931-fc14-40f9-b660-512d98b8b0fc)</h3>
+    <a href="https://app.tamara.co/payments?orderId=00824931-fc14-40f9-b660-512d98b8b0fc">https://app.tamara.co/payments?orderId=00824931-fc14-40f9-b660-512d98b8b0fc</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app.tamara.co/payments?orderId=00824931-fc14-40f9-b660-512d98b8b0fcwrong">https://app.tamara.co/payments?orderId=00824931-fc14-40f9-b660-512d98b8b0fcwrong</a><br>
 
-     <h2>1.1 Multi Pays:</h2>
-    <h3 style="color:red;">Origin No Short</h3>
-    <a href="https://tamarastg.page.link/payments/paydues">https://tamarastg.page.link/payments/paydues</a></br>
-
-     <h2>1.1 Paydue with short Links:</h2>
-    <h3 style="color:blue;">From iOS Build</h3>
-    <a href="https://tamarastg.page.link/ufoNV9A9PwfjJV9Z6 ">https://tamarastg.page.link/ufoNV9A9PwfjJV9Z6</a></br>
-
-     <h2>1.1 Paydue with short Links From Android:</h2>
-    <h3 style="color:blue;">From Android using SDK Build</h3>
-    <a href="https://tamarastg.page.link/HY82fnwovjJx9gnH9 ">https://tamarastg.page.link/HY82fnwovjJx9gnH9</a></br>
-    
+    <br>
+    <h3 style="color:green;">Correct!</h3>
+    <h3 style="color:green;">Pay Dues</h3>
+    <a href="https://app.tamara.co/payments/paydues">https://app.tamara.co/payments/paydues</a><br>
 
     <h2>2. Orders</h2>
-    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
-    <a href="https://tamarastg.page.link/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">"https://tamarastg.page.link/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd</a></br>
+    <h3 style="color:green;">Correct! (id = 00824931-fc14-40f9-b660-512d98b8b0fc)</h3>
+    <a href="https://app.tamara.co/orders?orderId=00824931-fc14-40f9-b660-512d98b8b0fc">https://app.tamara.co/orders?orderId=00824931-fc14-40f9-b660-512d98b8b0fc</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app.tamara.co/orders?orderId=00824931-fc14-40f9-b660-512d98b8b0fcwrong">https://app.tamara.co/orders?orderId=00824931-fc14-40f9-b660-512d98b8b0fcwrong</a><br>
 
-    <h2>3. In Store</h2>
+    <h2>1. In Store</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://tamarastg.page.link/in-store">https://tamarastg.page.link/in-store</a></br>
-
-    <h2>3. In Store Another URL</h2>
-    <h3 style="color:green;">Correct!</h3>
-    <a href="https://apptamara.page.link/in-store">https://apptamara.page.link/in-store</a></br>
+    <a href="https://app.tamara.co/in-store">https://app.tamara.co/in-store</a><br>
 
     <h2>4. Category</h2>
     <h3 style="color:green;">Correct! (id = 8)</h3>
-    <a href="https://tamarastg.page.link/category?categoryId=8">https://tamarastg.page.link/category?categoryId=8</a></br>
+    <a href="https://app.tamara.co/category?categoryId=8">https://app.tamara.co/category?categoryId=8</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app.tamara.co/category?categoryId=800">https://app.tamara.co/category?categoryId=800</a><br>
+
+    <h2>2. Bank Accounts</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://app.tamara.co/bank-accounts">https://app.tamara.co/bank-accounts</a><br>
+    <br>
+
+    <h1>〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️</h1>
+
+    <h1>* DynamicLinks</h1><br>
+    <h2>1. Payments:</h2>
+    <h3 style="color:green;">Correct! (id = 00824931-fc14-40f9-b660-512d98b8b0fc)</h3>
+    <a href="https://apptamara.page.link/NaK6YPML1ViDg4dg8">https://apptamara.page.link/NaK6YPML1ViDg4dg8</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://apptamara.page.link/LKPub8AkPxdPjrLm9">https://apptamara.page.link/LKPub8AkPxdPjrLm9</a><br>
+
+    <br>
+    <h3 style="color:green;">Correct!</h3>
+    <h3 style="color:green;">Pay Dues</h3>
+    <a href="https://app.tamara.co/payments/paydues">https://app.tamara.co/payments/paydues</a><br>
+    <a href="https://apptamara.page.link/MucyBbDS3FJ9wK567">https://apptamara.page.link/MucyBbDS3FJ9wK567</a><br>
+
+    <h2 style="color:rgb(38, 140, 218);">2. Orders (Updated 26/07/2021)</h2>
+    <h3 style="color:green;">Correct! (id = 00824931-fc14-40f9-b660-512d98b8b0fc)</h3>
+    <a href="https://apptamara.page.link/NaK6YPML1ViDg4dg8">https://apptamara.page.link/NaK6YPML1ViDg4dg8</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://apptamara.page.link/WSZTZatwNSLxiPw29">https://apptamara.page.link/WSZTZatwNSLxiPw29</a><br>
+
+    <h2>1. In Store</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://apptamara.page.link/in-store">https://apptamara.page.link/in-store</a><br><br>
+    <a href="https://apptamara.page.link/b4FD7EMMps3fk8dYA">https://apptamara.page.link/b4FD7EMMps3fk8dYA</a><br>
+
+    <h2 style="color:rgb(38, 140, 218);">4. Category (Updated 26/07/2021)</h2>
+    <h3 style="color:green;">Correct! (id = 8)</h3>
+    <a href="https://apptamara.page.link/wXhCgou4Utmy8FCq6">https://apptamara.page.link/wXhCgou4Utmy8FCq6</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://apptamara.page.link/Fue5nf4PyXWTAk4TA">https://apptamara.page.link/Fue5nf4PyXWTAk4TA</a><br>
+
+    <h2>2. Bank Accounts</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://apptamara.page.link/bank-accounts">https://apptamara.page.link/bank-accounts</a><br><br>
+    <a href="https://apptamara.page.link/uUMywVUhR9HMReoY8">https://apptamara.page.link/uUMywVUhR9HMReoY8</a><br>
+
+    <h2 style="color:red;">*Note: For ../bank-accounts, ../in-store, ../bank-accounts, we can configure easy in the Firebase console </h2>
+    <h2 style="color:red;">*Note - Importance: For the rest with ../?orderId=xxx, ../?categoryId=x </h2>
+    <h2 style="color:red;"> Please following the guild build shorten link by REST api:  </h2>
+    <br>
+    <br>
+    <br>
+
+    <h1>➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰</h1>
+    <h1>😱😱😱 STAGING 😱😱😱</h1>
+
+    <h1>* Account(STG):</h1>
+    <h4>Phone Number: +966 503334444</h4>
+
+    <h1>➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰➰</h1>
+
+    <h1>* DeepLinks:</h1><br>
+    <h2>1. Payments:</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="https://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecd</a><br>
+    <h3 style="color:red;">Wrong! (id = a78d5939-a164-4708-a980-62ddf633fecdwrong)</h3>
+    <a href="https://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecdwrong">https://app-staging.tamara.co/payments?orderId=a78d5939-a164-4708-a980-62ddf633fecdwrong</a><br>
+    <h3 style="color:green;">Pay Dues</h3>
+    <a href="https://app-staging.tamara.co/payments/paydues">https://app-staging.tamara.co/payments/paydues</a><br>
+
+    <h2>2. Orders</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="https://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd">https://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecd</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecdwrong">https://app-staging.tamara.co/orders?orderId=a78d5939-a164-4708-a980-62ddf633fecdwrong</a><br>
+
+    <h2>3. In Store</h2>
+    <h3 style="color:green;">Correct!</h3>
+    <a href="https://app-staging.tamara.co/in-store">https://app-staging.tamara.co/in-store</a><br>
+
+    <h2>4. Category</h2>
+    <h3 style="color:green;">Correct! (id = 8)</h3>
+    <a href="https://app-staging.tamara.co/category?categoryId=8">https://app-staging.tamara.co/category?categoryId=8</a><br>
+    <h3 style="color:red;">Wrong</h3>
+    <a href="https://app-staging.tamara.co/category?categoryId=800">https://app-staging.tamara.co/category?categoryId=800</a><br>
 
     <h2>5. Bank Accounts</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://tamarastg.page.link/bank-accounts">https://app.tamara.co/44XadSuCghGfRUEX8</a></br>
-    </br>
+    <a href="https://app-staging.tamara.co/bank-accounts">https://app-staging.tamara.co/bank-accounts</a><br>
+    <br>
 
-    <h2>6. Short Link, No Preview, For: https://app.tamara.co/payments?orderId=00824931-fc14-40f9-b660-512d98b8b0fc </h2>
+    <h1>〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️</h1>
+
+    <h1>* DynamicLinks</h1><br>
+    <h2>1. Payments:</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="https://tamarastg.page.link/TwaZSAysH4XKRBgm8">https://tamarastg.page.link/TwaZSAysH4XKRBgm8</a><br>
+    <h3 style="color:green;">Pay Dues</h3>
+    <a href="https://tamarastg.page.link/HY82fnwovjJx9gnH9">https://tamarastg.page.link/HY82fnwovjJx9gnH9</a><br>
+
+    <h2>2. Orders</h2>
+    <h3 style="color:green;">Correct! (id = a78d5939-a164-4708-a980-62ddf633fecd)</h3>
+    <a href="https://tamarastg.page.link/nCseVXsZ1xPXqFst5">https://tamarastg.page.link/nCseVXsZ1xPXqFst5</a><br>
+
+    <h2>3. In Store</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://apptamara.page.link/NaK6YPML1ViDg4dg8">https://apptamara.page.link/NaK6YPML1ViDg4dg8</a></br>
-    </br>
+    <a href="https://tamarastg.page.link/in-store">https://tamarastg.page.link/in-store</a><br><br>
+    <a href="https://tamarastg.page.link/Uy8wXWTbftPyziza7">https://tamarastg.page.link/Uy8wXWTbftPyziza7</a><br>
 
-    <h2>7. Short Link, No Preview, For: https://app.tamara.co/payments/paydues</h2>
+    <h2>4. Category</h2>
+    <h3 style="color:green;">Correct! (id = 8)</h3>
+    <a href="https://tamarastg.page.link/V9Kd6cgGrVnRmQVP6">https://tamarastg.page.link/V9Kd6cgGrVnRmQVP6</a><br>
+
+    <h2>5. Bank Accounts</h2>
     <h3 style="color:green;">Correct!</h3>
-    <a href="https://apptamara.page.link/MucyBbDS3FJ9wK567">https://apptamara.page.link/MucyBbDS3FJ9wK567</a></br>
-    </br>
+    <a href="https://tamarastg.page.link/bank-accounts">https://tamarastg.page.link/bank-accounts</a><br><br>
+    <a href="https://tamarastg.page.link/GYFgcpXYydmL3j6GA">https://tamarastg.page.link/GYFgcpXYydmL3j6GA</a><br>
+    <br>
 
-  </body>
-</html>
+  
+
+</body></html>
