--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
     <a href="https://apptamara.page.link/bank-accounts">https://apptamara.page.link/bank-accounts</a><br><br>
     <a href="https://apptamara.page.link/uUMywVUhR9HMReoY8">https://apptamara.page.link/uUMywVUhR9HMReoY8</a><br>
 
-    <h2 style="color:red;">*Note: For ../bank-accounts, ../in-store, ../bank-accounts, we can configure easy in the Firebase console </h2>
-    <h2 style="color:red;">*Note - Importance: For the rest with ../?orderId=xxx, ../?categoryId=x </h2>
+    <h2 style="color:red;">*Note: For  "../payments/paydues, ../in-store, ../bank-accounts", we can configure easy in the Firebase console </h2>
+    <h2 style="color:red;">* Importance: For "../?orderId=xxx, ../?categoryId=x" </h2>
     <h2 style="color:red;"> Please following the guild build shorten link by REST api:  </h2>
+    <h2 style="color:red;"> https://firebase.google.com/docs/dynamic-links/rest </h2>
     <br>
     <br>
     <br>
