--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <h2 style="color:red;">*Note: For  "../payments/paydues, ../in-store, ../bank-accounts", we can configure easy in the Firebase console </h2>
     <h2 style="color:red;">* Importance: For "../?orderId=xxx, ../?categoryId=x" </h2>
-    <h2 style="color:red;"> Please following the guild build shorten link by REST api:  </h2>
+    <h2 style="color:red;"> Please following the guideline to building the shorten link by REST api:  </h2>
     <h2 style="color:red;"> https://firebase.google.com/docs/dynamic-links/rest </h2>
     <br>
     <br>
