--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
     <h3 style="color:green;">Correct!</h3>
     <a href="https://apptamara.page.link/bank-accounts">https://apptamara.page.link/bank-accounts</a><br><br>
     <a href="https://apptamara.page.link/uUMywVUhR9HMReoY8">https://apptamara.page.link/uUMywVUhR9HMReoY8</a><br>
+    
+    <h2>6. Retrict email verification </h2>
+    <h3 style="color:red;">Correct!</h3>
+    <a href="https://app.tamara.co/email-verification?customerId=e1cc059d-09c7-47c6-8add-de25ddaefb2a&hash=cee87517da71627dcbe5bee719a9838e&locale=en_US">https://app.tamara.co/email-verification</a><br>
+    <br>
 
     <h2 style="color:red;">*Note: For  "../payments/paydues, ../in-store, ../bank-accounts", we can configure easy in the Firebase console </h2>
     <h2 style="color:red;">* Importance: For "../?orderId=xxx, ../?categoryId=x" </h2>
@@ -123,6 +128,11 @@
     <h2>5. Bank Accounts</h2>
     <h3 style="color:green;">Correct!</h3>
     <a href="https://app-staging.tamara.co/bank-accounts">https://app-staging.tamara.co/bank-accounts</a><br>
+    <br>
+    
+    <h2>6. Retrict email verification </h2>
+    <h3 style="color:red;">Correct!</h3>
+    <a href="https://app-staging.tamara.co/email-verification?customerId=e1cc059d-09c7-47c6-8add-de25ddaefb2a&hash=cee87517da71627dcbe5bee719a9838e&locale=en_US">https://app-staging.tamara.co/email-verification</a><br>
     <br>
 
     <h1>〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️〰️</h1>
